ci: do not treat warnings as fatal on dart analyze

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -489,7 +489,7 @@ jobs:
       - name: Static Analysis
         working-directory: packages/flutter_breez_liquid/
         if: ${{ success() || failure() }}
-        run: dart analyze lib
+        run: dart analyze --no-fatal-warnings lib
 
       - name: Check Formatting
         working-directory: packages/flutter_breez_liquid/
