--- a/.github/workflows/publish-all-platforms.yml
+++ b/.github/workflows/publish-all-platforms.yml
@@ -275,7 +275,8 @@ jobs:
       publish: ${{ needs.setup.outputs.publish == 'true' }}
     secrets:
       REPO_SSH_KEY: ${{ secrets.REPO_SSH_KEY }}
-      SWIFT_RELEASE_TOKEN: ${{ secrets.SWIFT_RELEASE_TOKEN }}
+      FLUTTER_RELEASE_TOKEN: ${{ secrets.SWIFT_RELEASE_TOKEN }}
+      CARGOKIT_PRIVATE_KEY: ${{ secrets.CARGOKIT_PRIVATE_KEY }}
 
   # react native version x.y.z will at runtime require
   # ios and android packages x.y.z being published already.
