--- a/.github/workflows/publish-flutter.yml
+++ b/.github/workflows/publish-flutter.yml
@@ -89,8 +89,8 @@ jobs:
           sed -i.bak -e 's/^breez-sdk-liquid = .*/breez-sdk-liquid = { git = "https:\/\/github.com\/breez\/breez-sdk-liquid.git", rev = "'"$HASH"'"}/' Cargo.toml
 
       - name: Generate Flutter Bindings
-        working-directory: packages/flutter_breez_liquid/rust
-        run: cargo build --release
+        working-directory: packages/flutter_breez_liquid
+        run: just bootstrap true true
 
       - name: Prepare Package Structure
         working-directory: dist
