fix: correct the cmd called on "Generate Flutter Bindings" step

--- a/.github/workflows/publish-flutter.yml
+++ b/.github/workflows/publish-flutter.yml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Generate Flutter Bindings
         working-directory: packages/flutter_breez_liquid
-        run: just bootstrap true true
+        run: just codegen
 
       - name: Prepare Package Structure
         working-directory: dist
