--- a/.github/workflows/publish-flutter.yml
+++ b/.github/workflows/publish-flutter.yml
@@ -107,7 +107,7 @@ jobs:
           cp -r ../build/packages/flutter_breez_liquid/{android,ios,macos,lib,rust} .
 
           # Clean up gitignore files
-          rm -f {ios,macos,lib,rust}/.gitignore
+          rm -f {ios,macos,lib,rust/src}/.gitignore
 
           # Use production configurations
           mv android/build.gradle.production android/build.gradle
