--- a/packages/flutter_breez_liquid/android/build.gradle
+++ b/packages/flutter_breez_liquid/android/build.gradle
@@ -32,7 +32,7 @@ android {
 
     // Bumping the plugin compileSdkVersion requires all clients of this plugin
     // to bump the version in their app.
-    compileSdkVersion 36
+    compileSdk 35
 
     // Use the NDK version
     // declared in /android/app/build.gradle file of the Flutter project.
@@ -50,7 +50,7 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 24  // Raised for NSE support
+        minSdk 24  // Raised for NSE support
     }
 
     sourceSets {
