add the serialization plugin to buildscript dependencies

--- a/packages/flutter_breez_liquid/android/build.gradle
+++ b/packages/flutter_breez_liquid/android/build.gradle
@@ -2,6 +2,13 @@ version '0.10.3' // generated; do not edit
 group 'com.flutter_rust_bridge.flutter_breez_liquid'
 
 buildscript {
+    ext.versions = [
+        'agp': '7.3.0',
+        'kotlin': '1.9.21',
+        'serialization': '1.9.0',
+        'jna': '5.14.0'
+    ]
+
     repositories {
         google()
         mavenCentral()
@@ -9,8 +16,9 @@ buildscript {
 
     dependencies {
         // The Android Gradle Plugin knows how to build native code with the NDK.
-        classpath 'com.android.tools.build:gradle:7.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.21"
+        classpath "com.android.tools.build:gradle:${versions.agp}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:${versions.kotlin}"
     }
 }
 
@@ -66,11 +74,11 @@ android {
 
 dependencies {
     // NSE dependencies
-    implementation 'net.java.dev.jna:jna:5.14.0@aar'
+    implementation "net.java.dev.jna:jna:${versions.jna}@aar"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
     implementation 'androidx.appcompat:appcompat:1.7.1'
     /* JSON serialization */
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:${versions.serialization}"
     /* Kotlin bindgen dependencies */
     implementation 'org.jetbrains.kotlinx:atomicfu:0.29.0'
     implementation 'com.squareup.okio:okio:3.16.0'
