--- a/packages/flutter_breez_liquid/rust/Cargo.toml
+++ b/packages/flutter_breez_liquid/rust/Cargo.toml
@@ -34,3 +34,16 @@ opt-level = "z"   # Optimize for size.
 codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
 panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
 rpath = true
+
+# Support for 16KB page sizes on Android 15+ 64-bit architectures
+[target.aarch64-linux-android]
+rustflags = [
+    "-C", "link-arg=-Wl,--hash-style=both",
+    "-C", "link-arg=-Wl,-z,max-page-size=16384",
+]
+
+[target.x86_64-linux-android]
+rustflags = [
+    "-C", "link-arg=-Wl,--hash-style=both",
+    "-C", "link-arg=-Wl,-z,max-page-size=16384",
+]
