--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -477,7 +477,11 @@ jobs:
         with:
           version: "27.2"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      
+
+      - name: Check flutter_breez_liquid Rust package for errors
+        working-directory: packages/flutter_breez_liquid/rust
+        run: cargo check
+
       - name: Install flutter_rust_bridge_codegen dependencies
         working-directory: packages/flutter_breez_liquid/
         run: just frb
