--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -478,21 +478,15 @@ jobs:
           version: "27.2"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Unignore frb_generated.rs
-        working-directory: packages/flutter_breez_liquid/rust/src
-        run: sed -i '' '/frb_generated\.rs/d' .gitignore || true
-
       - name: Install flutter_rust_bridge_codegen dependencies
         working-directory: packages/flutter_breez_liquid/
         run: just frb
 
-      - name: Generate Dart/Flutter bindings & Softlink C Headers
+      - name: Generate Dart/Flutter bindings & Check Rust package for errors
         working-directory: packages/flutter_breez_liquid/
-        run: just codegen
-
-      - name: Check flutter_breez_liquid Rust package for errors
-        working-directory: packages/flutter_breez_liquid/rust
-        run: cargo check
+        run: |
+            just codegen
+            cd rust && cargo check
 
       - name: Static Analysis
         working-directory: packages/flutter_breez_liquid/
