--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -477,14 +477,16 @@ jobs:
         with:
           version: "27.2"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Install flutter_rust_bridge_codegen dependencies
         working-directory: packages/flutter_breez_liquid/
         run: just frb
 
-      - name: Generate Dart/Flutter bindings & Softlink C Headers
+      - name: Generate Dart/Flutter bindings & Check Rust package for errors
         working-directory: packages/flutter_breez_liquid/
-        run: just codegen
+        run: |
+            just codegen
+            cd rust && cargo check
 
       - name: Static Analysis
         working-directory: packages/flutter_breez_liquid/
